Adding articles to aside content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,23 @@
           </ul>
         </dd>
   </footer>
-
+  <aside>
+    <h2>Reviews</h2>
+      <article>
+        <h3>Thomas Schweitzer —</h3>
+          <footer>
+            <p>2012-12-12 — 4/5</p>
+          </footer>
+          <p>Dieses Spiel ist super super-leichte, aber sehr lustig.</p>
+        </article>
+      <article>
+        <h3>Natasha Stevens —</h3>
+          <footer>
+            <p>2012-04-15 — 5/5</p>
+          </footer>
+          <p>This game is bloody amazing! My mates and I totally love playing it.</p>
+      </article>
+  </aside>
 
 </article>
 </html>
