Add strong tag and fix the body tag issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Index Writer</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+<body>
 <article>
 
   <header>
@@ -78,8 +79,9 @@
           <footer>
             <p>2012-04-15 — 5/5</p>
           </footer>
-          <p>This game is bloody amazing! My mates and I totally love playing it.</p>
+          <p>This game is <strong>bloody amazing!</strong> My mates and I totally love playing it.</p>
       </article>
   </aside>
 </article>
+</body>
 </html>
